Fix the alignment of Checkbox and Radio Button when they don't have a label (#4070)

--- a/packages/core/src/checkbox/Checkbox.css
+++ b/packages/core/src/checkbox/Checkbox.css
@@ -25,7 +25,7 @@
 
 .saltCheckbox-input,
 .saltCheckboxIcon {
-  margin-top: calc((var(--salt-text-lineHeight) - var(--salt-size-selectable)) / 2);
+  margin: calc((var(--salt-text-lineHeight) - var(--salt-size-selectable)) / 2) 0;
   box-sizing: border-box;
 }
 
@@ -57,7 +57,6 @@
 /* Styles applied to input element */
 .saltCheckbox-input {
   cursor: inherit;
-  margin: 0;
   opacity: 0;
   padding: 0;
   position: absolute;
